# ApplyGo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ApplyPilot.code-workspace  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_policy_decision_outcomes.py  0003_preserve_event_log_on_application_delete.py  0004_align_application_state_default.py  0005_add_executor_contract_metadata.py  0006_add_m1_value_check_constraints.py  0007_retain_policy_and_executor_audit.py  0008_add_application_packet_reviews.py  0009_add_company_identity_schema.py  0010_backfill_job_company_identity.py  0011_complete_company_identity_cutover.py  0012_add_m5_document_answer_schema.py  0013_make_documents_application_id_nullable.py  0014_remove_documents_legacy_compatibility.py
backend/scripts/: validate_seed_to_dashboard.py
backend/src/applypilot/: __init__.py  main.py
backend/tests/integration/: test_application_api.py  test_company_cutover_migration.py  test_cors_and_dashboard.py  test_dashboard_asset_contract.py  test_documentation_links.py  test_m5_document_answer_migration.py  test_m5_document_compatibility_cleanup_migration.py  test_m5_document_library_nullability.py  test_m5_packet_api.py  test_placeholder.py  test_seed_to_dashboard.py
backend/tests/unit/: test_application_scoring.py  test_company_identity_normalization.py  test_demo_seed.py  test_executor_stub.py  test_job_intake_classification.py  test_placeholder.py  (+9 more)
(+171 files in other folders)
